# ufs-analysis

./: .gitignore  LICENSE  README.md  _config.yml  colab_environment.yml  environment.yml  index.html  index.md  macos_environment.yml  pyproject.toml  sfs-ens-nao-acc.ipynb  sfs-ens-nino3p4-acc.ipynb  sfs-ens-nino3p4-rmse.ipynb  sfs-ens-nino3p4.ipynb  sfs-ens-pna-acc.ipynb  sfs-ens-pna-rmse.ipynb  test.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
_includes/: header.html  index.html
_includes/sfs-analysis/: .index.html.swp  index.html  index.md
docs/: MRW-Analysis.md  S2S-Analysis.md  SFS-Analysis.md
src/.ipynb_checkpoints/: client-checkpoint.py  era5client-checkpoint.py  regrid-checkpoint.py
src/datareader/: DataReader_Factory.py  DataReader_Super.py  ERA5_DataReader.py  SUPPLIED_DataReader.py  UFS_DataReader.py  datareader.py
src/regridder/: Regrid.py
src/util/: cmaps.py  cmaps.yml  convert_to_colab.py  locstream_to_latlon.py  oni.py  regridutil.py  resample.py  rws.py  stats.py  timeutil.py  util.py
tests/: pytest.ini  test_data_reader.py  test_pep8.py  test_regrid.py
tests/test_in/: case12_regrid.nc  case1_regrid.nc  case1_resample.nc  case3_resample.nc  case4_resample.nc  case6_align.nc  case6_resample.nc  case8_regrid.nc
ufs-analysis/src/datareader/: datareader.py
ufs-analysis/src/regridder/: Regrid.py
ufs-analysis/src/util/: util.py
ufs_analysis/: __init__.py  environment.yml  pull_request_template.md
ufs_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ufs_analysis/tests/: test_data_reader.py
(+154 files in other folders)
